scripting: Fix a crash in useGlThumbnails() when compositing is off

BUG: 479791